--- a/front/public/index.html
+++ b/front/public/index.html
@@ -11,8 +11,8 @@
       <div class="header">
         <div class="headerheader">
           <ul class="ulul">
-            <li class="lili"><a href="#">Карта</a></li>
-            <li class="lili"><a href="#">Меню</a></li>
+            <li class="lili"><a href="http://localhost:3000/">Карта</a></li>
+            <li class="lili"><a href="http://localhost:3000/menu">Меню</a></li>
           </ul>
         </div>
       </div>
